# obs-cutter

./: .gitignore  CHANGELOG.md  Cargo.toml  HOMEBREW-QUICK-START.md  HOMEBREW.md  INSTALL.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
Formula/: obs-cutter-github.rb  obs-cutter.rb
scripts/: download-ffmpeg.sh
src/: gui_main.rs  lib.rs  main.rs
src/core/: config.rs  encoder.rs  error.rs  ffmpeg.rs  mod.rs  progress.rs  video.rs
src/gui/: app.rs  message.rs  mod.rs  theme.rs
